--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             </div>
                             <div class="row">
                                 <div class="buttons padd-15">
-                                    <a href="cvWiame.pdf" download class="btn"> Télécharger CV</a>
+                                    <a href="CV.pdf" download class="btn"> Télécharger CV</a>
                                     <a href="https://www.linkedin.com/in/wiame-elalami/" target="_blank" class="btn hire-me"> LinkedIn</a>
                                     <a href="#contact" class="btn hire-me"> Contactez-moi</a>
                                 </div>
@@ -189,21 +189,16 @@
             </div>        
         </div>
         <div class="row">
-           <!-- <div class="portfolio-heading padd-15">
-                <h2>Mes derniers projets sur CodePen:</h2>
-            </div> 
 
-Section "Projets" : Organisez une section dédiée à vos projets. Pour chaque projet, créez une sous-section individuelle avec les éléments suivants :
+<!-- Section "Projets" : Organiser une section dédiée à mes projets. Pour chaque projet, créer une sous-section individuelle avec les éléments suivants :
 
-Titre du projet : Utilisez un titre clair et accrocheur.
-Description du projet : Fournissez une brève description de l'objectif du projet, des fonctionnalités principales et de la technologie utilisée.
-Cahier des charges : Mettez en ligne le cahier des charges pour chaque projet. Cela permet aux visiteurs de comprendre les exigences initiales du projet et votre capacité à les respecter.
-Capture d'écran ou maquette : Incluez des captures d'écran de l'interface utilisateur ou des maquettes pour donner une idée visuelle du projet.
-Technologies utilisées : Énumérez les langages de programmation, les frameworks, les bases de données, et toute autre technologie pertinente que vous avez utilisée.
-Code source : Si possible, fournissez des liens vers le code source sur des plateformes comme GitHub. Cela permet aux employeurs potentiels de consulter votre code et de comprendre votre approche de développement. 
-
-        -->
-        
+Titre du projet : Utiliser un titre clair et accrocheur.
+Description du projet : Fournir une brève description de l'objectif du projet, des fonctionnalités principales et de la technologie utilisée.
+Cahier des charges : Mettre en ligne le cahier des charges pour chaque projet. Cela permet aux visiteurs de comprendre les exigences initiales du projet et ma capacité à les respecter.
+Capture d'écran ou maquette : Inclure des captures d'écran de l'interface utilisateur ou des maquettes pour donner une idée visuelle du projet.
+Technologies utilisées : Énumérer les langages de programmation, les frameworks, les bases de données, et toute autre technologie pertinente que j'ai utilisé.
+Code source : Fournir des liens vers le code source sur des plateformes comme GitHub. Cela permet aux employeurs potentiels de consulter le code et de comprendre votre approche de développement. 
+         -->
         </div>
 
         <div class="row">
