--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="row">
 
                 <div class="home-info padd-15">
-                    <h1 class="bienvenue">Bienvenue dans ma quête professionnelle ! <br> Un voyage où chaque étape sculpte le professionnel que je deviens.</br></h1>
+                    <h1 class="bienvenue">Bienvenue dans ma quête professionnelle ! <br> Un voyage où chaque étape sculpte la professionnelle que je deviens.</br></h1>
                     <h3 class="hello">Je m'appelle <span class="name">Elalami Wiame</span></h3>
                     <h3 class="my-profession"> Je suis <span class="typing"></span></h3>
                     <p> Passionnée de développement informatique, actuellement en formation chez LDNR preparant un titre bac+3. Mon parcours m'a permis de maîtriser les langages de programmation tels que C++, Java et JavaScript, avec une emphase particulière sur la création d'architectures logicielles robustes.<br>
@@ -261,7 +261,6 @@ Code source : Fournir des liens vers le code source sur des plateformes comme Gi
 // Ecriture progressive
     var typed = new Typed(".typing",{
         strings:["conceptrice developpeuse d'applications", "à la recherche d'un stage non rémunéré"],
-        strings:["Web Designer", "Web Developer", "à la recherche d'une PMSMP"],
         typeSpeed:100,
         backSpeed:60,
         loop:true,
