--- a/index.html
+++ b/index.html
@@ -45,10 +45,15 @@
                     <h1 class="bienvenue">Bienvenue dans ma quête professionnelle ! <br> Un voyage où chaque étape sculpte la professionnelle que je deviens.</br></h1>
                     <h3 class="hello">Je m'appelle <span class="name">Elalami Wiame</span></h3>
                     <h3 class="my-profession"> Je suis <span class="typing"></span></h3>
-                    <p> Passionnée de développement informatique, actuellement en formation chez LDNR preparant un titre bac+3. Mon parcours m'a permis de maîtriser les langages de programmation tels que C++, Java et JavaScript, avec une emphase particulière sur la création d'architectures logicielles robustes.<br>
-                        
-                        <strong><br>Objectif professionnel :</br></strong>
-                        En quête de perfectionnement continu, je suis à la recherche d'un stage de deux mois à partir de juin 2024. Mon objectif est d'appliquer mes connaissances acquises au cours de ma formation dans un environnement professionnel stimulant, tout en contribuant de manière significative à des projets innovants.</p>
+                    <p> Passionnée par les possibilités infinies qu'offre le monde de la technologie, je suis constamment en quête de nouveaux défis et d'apprentissages.
+                        <br>
+                        <strong><br>Objectifs professionnel :</br></strong>
+                        Je suis actuellement en formation chez LDNR, où je me prépare à obtenir le titre de Concepteur Développeur d'Applications.                 
+                        <br>
+                        En octobre, je franchirai une nouvelle étape en intégrant l'École Supérieure de Génie Informatique (ESGI) pour poursuivre mes études en sécurité informatique. 
+                        <br>
+                        ✨Mon objectif est de décrocher un Master dans ce domaine en pleine expansion. ✨
+                    </p>
                     <a href="#contact" class="btn hire-me"> Contactez-moi</a>
                 </div>
                 <div class="home-img padd-15">
@@ -72,10 +77,12 @@
                 <div class="about-content padd-15">
                     <div class="row">
                         <div class="about-text padd-15">
-                            <p> En tant qu'étudiante en conception développement d'applications, je combine créativité et rigueur technique. J'apporte une passion constante pour l'innovation, un engagement envers l'excellence, et la capacité à résoudre des problèmes complexes. Mon adaptabilité aux nouvelles technologies et ma volonté d'apprendre en continu font de moi un candidat idéal pour contribuer à votre équipe. <br>
+                            <p> Je combine créativité et rigueur technique. J'apporte une passion constante pour l'innovation, un engagement envers l'excellence, et la capacité à résoudre des problèmes complexes. Mon adaptabilité aux nouvelles technologies et ma volonté d'apprendre en continu font de moi une candidate idéale pour contribuer à votre équipe. <br>
                                 <strong><br>👩🏻‍💻 Ce que je recherche :</br></strong>
-                                Je suis ouverte à des stages qui offrent une immersion complète dans le développement d'applications, avec une préférence pour des projets stimulants et innovants. Je suis motivée par l'idée de travailler dans un environnement dynamique qui encourage la collaboration et la croissance professionnelle. </p>
 
+                                Actuellement, je recherche une alternance de deux ans dans le domaine de la sécurité informatique, dans le cadre de mon cursus à l'ESGI.
+                                <br>Ma préférence va vers des projets stimulants et innovants, où je pourrai mettre en pratique mes connaissances et développer mes compétences. 
+                                <br>Je suis convaincue que ces opportunités d'alternance seront des tremplins essentiels pour mon développement professionnel dans le domaine de la sécurité informatique.
                         </div>
                     </div>
                     <div class="row">
@@ -99,7 +106,7 @@
                             </div>
                             <div class="row">
                                 <div class="buttons padd-15">
-                                    <a href="CV.pdf" download class="btn"> Télécharger CV</a>
+                                    <a href="CV ELALAMI Wiame Alternance.pdf" download class="btn"> Mon CV</a>
                                     <a href="https://www.linkedin.com/in/wiame-elalami/" target="_blank" class="btn hire-me"> LinkedIn</a>
                                     <a href="#contact" class="btn hire-me"> Contactez-moi</a>
                                 </div>
@@ -123,38 +130,30 @@
             <div class="service-item">
                 <div class="service-item-inner">
                     <div class="icon">
-                        <i class="fa fa-users"></i>                        
-                    </div>
-                        <h4>Conception d'interface utilisateur & d'experience utilisateur</h4>
-                        <p>Création de maquettes, de prototypes et conception de l'interface utilisateur pour garantir une expérience utilisateur intuitive.</p>
+                        <i class="fa fa-land-mine-on"></i>
+                        </div>
+                        <h4>Analyse de risques</h4>
+                        <p>Réaliser des analyses approfondies des risques liés à la sécurité informatique pour vous aider à comprendre et à atténuer les menaces potentielles.</p>
                 </div>
             </div>
+
                 <div class="service-item padd-15">
                     <div class="service-item-inner">
                         <div class="icon">
-                            <i class="fa fa-laptop-code"></i>
+                            <i class="fa fa-circle-radiation"></i>
                         </div>
-                        <h4>Développement back-end & front-end</h4>
-                        <p>Design de vos sites internet à vos choix et à vos goûts </p>
+                    <h4>Audit de sécurité</h4>
+                    <p>Évaluer la sécurité des infrastructures informatiques et des réseaux, en identifiant les vulnérabilités et en proposant des solutions pour les corriger.</p>
                     </div>
                 </div>
 
                 <div class="service-item padd-15">
                     <div class="service-item-inner">
                         <div class="icon">
-                            <i class="fa fa-mobile-alt"></i>
-                    </div>
-                    <h4>Développement web</h4>
-                    <p>Conception de vos sites internet et applications pour tous type d'appareil </p>
-                    </div>
-                </div>
-
-                <div class="service-item padd-15">
-                    <div class="service-item-inner">
-                        <div class="icon">
-                            <i class="fa fa-repeat"></i></div>                    
-                            <h4>Maintenance & mise à jour</h4>
-                    <p> Service de maintenance continue, application de mises à jour, correction des erreurs et maintenabilité de la compatibilité avec les nouvelles versions des systèmes d'exploitation ou des navigateurs. </p>
+                            <i class="fa fa-comment-medical"></i>                  
+                        </div>                            
+                            <h4>Conseil en conformité réglementaire</h4>
+                            <p> Aider les entreprises à se conformer aux réglementations en matière de protection des données et de sécurité informatique, telles que le RGPD (Règlement Général sur la Protection des Données) ou la norme ISO 27001. </p>
                     </div>
                 </div>
 
@@ -162,17 +161,27 @@
                     <div class="service-item-inner">
                         <div class="icon">
                             <i class="fa fa-shield-halved"></i>                    </div>
-                    <h4>Sécurité de l'application</h4>
-                    <p> Intégration des mesures de sécurité pour protéger votre application contre les vulnérabilités et les attaques. </p>
+                    <h4>Tests d'intrusion</h4>
+                    <p>Évaluer la résistance de vos systèmes informatiques aux attaques externes et internes.</p>
                     </div>
                 </div>
 
                 <div class="service-item padd-15">
                     <div class="service-item-inner">
                         <div class="icon">
-                            <i class="fa fa-database"></i>                    </div>
-                    <h4>Intégration de bases de données</h4>
-                    <p> Intégration des bases de données appropriées en gérant les opérations de lecture et écriture de données. </p>
+                            <i class="fa fa-repeat"></i></div>                    
+                    <h4>Veille technologique et conseils stratégiques</h4>
+                    <p> Vous aider à rester à jour avec les dernières tendances et les meilleures pratiques en matière de cybersécurité. </p>
+                    </div>
+                    
+                </div>
+                <div class="service-item padd-15">
+                    <div class="service-item-inner">
+                        <div class="icon">
+                            <i class="fa fa-laptop-code"></i>
+                        </div>
+                        <h4>Développement back-end & front-end</h4>
+                        <p>Design de vos sites internet à vos choix et à vos goûts </p>
                     </div>
                 </div>
                     <!--Services item end-->
@@ -260,9 +269,9 @@ Code source : Fournir des liens vers le code source sur des plateformes comme Gi
 
 // Ecriture progressive
     var typed = new Typed(".typing",{
-        strings:["conceptrice developpeuse d'applications", "à la recherche d'un stage non rémunéré"],
-        typeSpeed:100,
-        backSpeed:60,
+        strings:["en spécialité sécurité informatique","à la recherche d'une alternance de 2 ans"],
+        typeSpeed:150,
+        backSpeed:100,
         loop:true,
     })
 // Fin ecriture progressive
