Architecture logiciel maj

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ Code source : Fournir des liens vers le code source sur des plateformes comme Gi
 
 // Ecriture progressive
     var typed = new Typed(".typing",{
-        strings:["en spécialité sécurité informatique","à la recherche d'une alternance de 2 ans"],
+        strings:["en spécialité architecture logiciels","à la recherche d'une alternance de 2 ans"],
         typeSpeed:150,
         backSpeed:100,
         loop:true,
