--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
                     <p> Passionnée par les possibilités infinies qu'offre le monde de la technologie, je suis constamment en quête de nouveaux défis et d'apprentissages.
                         <br>
                         <strong><br>Objectifs professionnel :</br></strong>
-                        Je suis actuellement en formation chez LDNR, où je me prépare à obtenir le titre de Concepteur Développeur d'Applications.                 
-                        <br>
-                        En octobre, je franchirai une nouvelle étape en intégrant l'École Supérieure de Génie Informatique (ESGI) pour poursuivre mes études en sécurité informatique. 
+                        Je suis actuellement en stage chez BuyBox, où je travaille sur un projet très interéssant de conception et developpement d'un dashboard pour suivre en temps réel des migrations.<br>
+                        En octobre, je franchirai une nouvelle étape en intégrant l'École Supérieure de Génie Informatique (ESGI) pour poursuivre mes études en architecture logiciels. 
                         <br>
                         ✨Mon objectif est de décrocher un Master dans ce domaine en pleine expansion. ✨
                     </p>
@@ -80,9 +79,9 @@
                             <p> Je combine créativité et rigueur technique. J'apporte une passion constante pour l'innovation, un engagement envers l'excellence, et la capacité à résoudre des problèmes complexes. Mon adaptabilité aux nouvelles technologies et ma volonté d'apprendre en continu font de moi une candidate idéale pour contribuer à votre équipe. <br>
                                 <strong><br>👩🏻‍💻 Ce que je recherche :</br></strong>
 
-                                Actuellement, je recherche une alternance de deux ans dans le domaine de la sécurité informatique, dans le cadre de mon cursus à l'ESGI.
+                                Actuellement, je recherche une alternance de deux ans dans le domaine de l'architecture logiciels, dans le cadre de mon cursus à l'ESGI.
                                 <br>Ma préférence va vers des projets stimulants et innovants, où je pourrai mettre en pratique mes connaissances et développer mes compétences. 
-                                <br>Je suis convaincue que ces opportunités d'alternance seront des tremplins essentiels pour mon développement professionnel dans le domaine de la sécurité informatique.
+                                <br>Je suis convaincue que ces opportunités d'alternance seront des tremplins essentiels pour mon développement professionnel dans le domaine de l'informatique.
                         </div>
                     </div>
                     <div class="row">
