--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                     <p> Passionnée par les possibilités infinies qu'offre le monde de la technologie, je suis constamment en quête de nouveaux défis et d'apprentissages.
                         <br>
                         <strong><br>Objectifs professionnel :</br></strong>
-                        Je suis actuellement en stage chez BuyBox, où je travaille sur un projet très interéssant de conception et developpement d'un dashboard pour suivre en temps réel des migrations.<br>
-                        En octobre, je franchirai une nouvelle étape en intégrant l'École Supérieure de Génie Informatique (ESGI) pour poursuivre mes études en architecture logiciels. 
+                        J'ai été en stage chez BuyBox, où j'étais sur un projet très interéssant de conception et developpement d'un dashboard pour suivre en temps réel des migrations.<br>
+                        En octobre, j'ai franchi une nouvelle étape en intégrant l'École Supérieure de Génie Informatique (ESGI) pour poursuivre mes études en architecture logiciels et ingénieurie du web. 
                         <br>
                         ✨Mon objectif est de décrocher un Master dans ce domaine en pleine expansion. ✨
                     </p>
@@ -79,7 +79,7 @@
                             <p> Je combine créativité et rigueur technique. J'apporte une passion constante pour l'innovation, un engagement envers l'excellence, et la capacité à résoudre des problèmes complexes. Mon adaptabilité aux nouvelles technologies et ma volonté d'apprendre en continu font de moi une candidate idéale pour contribuer à votre équipe. <br>
                                 <strong><br>👩🏻‍💻 Ce que je recherche :</br></strong>
 
-                                Actuellement, je recherche une alternance de deux ans dans le domaine de l'architecture logiciels, dans le cadre de mon cursus à l'ESGI.
+                                Actuellement, je recherche une alternance de deux ans dans le domaine de l'architecture logiciels et de l'ingénieurie web, dans le cadre de mon cursus à l'ESGI.
                                 <br>Ma préférence va vers des projets stimulants et innovants, où je pourrai mettre en pratique mes connaissances et développer mes compétences. 
                                 <br>Je suis convaincue que ces opportunités d'alternance seront des tremplins essentiels pour mon développement professionnel dans le domaine de l'informatique.
                         </div>
@@ -88,7 +88,7 @@
                         <div class="personal-info padd-15">
                             <div class="row">
                                 <div class="info-item padd-15">
-                                    <p> Anniversaire - Âge : <span>27 juillet 2002 - 21 ans</span></p>
+                                    <p> Anniversaire - Âge : <span>27 juillet 2002 - 22 ans</span></p>
                                 </div>
                                 <div class="info-item padd-15">
                                     <p> Email : <span>wiameelalami02@gmail.com</span></p>
@@ -105,7 +105,7 @@
                             </div>
                             <div class="row">
                                 <div class="buttons padd-15">
-                                    <a href="CV ELALAMI Wiame Alternance.pdf" download class="btn"> Mon CV</a>
+                                    <a href="CV ELALAMI Wiame.pdf" download class="btn"> Mon CV</a>
                                     <a href="https://www.linkedin.com/in/wiame-elalami/" target="_blank" class="btn hire-me"> LinkedIn</a>
                                     <a href="#contact" class="btn hire-me"> Contactez-moi</a>
                                 </div>
