Ajouts d'explication de mes projets

--- a/index.html
+++ b/index.html
@@ -194,17 +194,27 @@
             </div>        
         </div>
         <div class="row">
+<h3>Expérience Free-Lance : TheNewWay <br> </h3>
+J'ai eu l'opportunité de travailler pour une société spécialisée dans la vente en ligne de sneakers. Mon rôle principal était de les accompagner dans la personnalisation de leur boutique Shopify, tout en optimisant leur SEO (Search Engine Optimization) pour accroître leur visibilité en ligne et améliorer leur positionnement sur les moteurs de recherche.
+<br>
+J'ai abordé ce projet avec une vision globale et structurée. J'ai d'abord pris en compte l'architecture existante de la plateforme Shopify et les besoins spécifiques de l'entreprise. J'ai travaillé sur la personnalisation du thème Shopify pour qu'il reflète l'identité visuelle de la marque tout en garantissant une architecture web robuste, évolutive et maintenable. J'ai également intégré des applications spécifiques à Shopify, tout en assurant une bonne interopérabilité entre les différents modules pour une gestion efficace des commandes et du stock.
+<br>
+De plus, j'ai travaillé sur les aspects techniques de l'optimisation du site. J'ai optimisé le code pour améliorer les performances et la vitesse de chargement des pages, ce qui est essentiel pour une bonne expérience utilisateur et un bon classement SEO. J'ai mis en place des pratiques d'optimisation des images, des balises méta, et d'intégration des mots-clés pertinents pour améliorer le référencement organique du site.
 
-<!-- Section "Projets" : Organiser une section dédiée à mes projets. Pour chaque projet, créer une sous-section individuelle avec les éléments suivants :
+Ce projet m'a permis d'exercer des compétences à la fois en ingénierie web, avec une approche pratique et technique, et en architecture logicielle, en prenant en compte les exigences à long terme de maintenabilité et d'évolution de la solution.  <br>
+<br><br>    </div>
 
-Titre du projet : Utiliser un titre clair et accrocheur.
-Description du projet : Fournir une brève description de l'objectif du projet, des fonctionnalités principales et de la technologie utilisée.
-Cahier des charges : Mettre en ligne le cahier des charges pour chaque projet. Cela permet aux visiteurs de comprendre les exigences initiales du projet et ma capacité à les respecter.
-Capture d'écran ou maquette : Inclure des captures d'écran de l'interface utilisateur ou des maquettes pour donner une idée visuelle du projet.
-Technologies utilisées : Énumérer les langages de programmation, les frameworks, les bases de données, et toute autre technologie pertinente que j'ai utilisé.
-Code source : Fournir des liens vers le code source sur des plateformes comme GitHub. Cela permet aux employeurs potentiels de consulter le code et de comprendre votre approche de développement. 
-         -->
-        </div>
+        <div class="row">
+<h3>Expérience personnelle : Mon E-Portfolio <br></h3>
+
+Mon e-portfolio est une réalisation significative qui reflète mon parcours, mes compétences et mes réalisations. C'est un site web personnel que j'ai conçu en utilisant les langages CSS, HTML et JavaScript. Il est hébergé sur la plateforme Netlify et est étroitement intégré à mon compte GitHub.
+<br>
+Ce projet offre une plateforme interactive où je présente mon expérience professionnelle et académique, mettant en avant mes compétences essentielles. Vous y trouverez une section dédiée à mes projets passés, chacun étant présenté avec des détails sur les objectifs, les technologies utilisées et les résultats obtenus. L'aspect visuel de mon e-portfolio a été personnalisé grâce à mes compétences en CSS pour créer un design esthétique et professionnel.
+<br>
+L'objectif principal de ce site est de me permettre de me connecter avec un public plus large, que ce soit des employeurs potentiels, des collègues de l'industrie ou d'autres professionnels intéressés par mon travail. Il offre une vitrine en ligne continue de mon évolution et de mon engagement envers l'apprentissage et le monde de l'informatique.
+<br>
+Le lien entre mon e-portfolio et mon compte GitHub assure une gestion facile du contenu, me permettant de le mettre à jour en temps réel, que ce soit en ajoutant de nouveaux projets ou en apportant des modifications aux informations existantes. En somme, ce projet représente ma passion pour le développement d’applications et ma volonté de partager mon parcours de manière engageante et interactive.
+<br><br> <br>    </div>
 
         <div class="row">
     <!--Portfolio item start-->
