Modification de services

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                         <div class="icon">
                             <i class="fa fa-users"></i>                        
                         </div>
-                            <h4>Conception d'interface utilisateur & d'experience utilisateur</h4>
-                            <p>Création de maquettes, de prototypes et conception de l'interface utilisateur pour garantir une expérience utilisateur intuitive.</p>
+                            <h4>Conception de l'architecture logicielle</h4>
+                            <p>Je crée pour vous une architecture logicielle robuste et évolutive, en définissant les différents composants, les interactions entre eux et en s'assurant que le système répond aux exigences fonctionnelles et non fonctionnelles.</p>
                     </div>
                 </div>
                     <div class="service-item padd-15">
@@ -149,7 +149,7 @@
                             <div class="icon">
                                 <i class="fa fa-mobile-alt"></i>
                         </div>
-                        <h4>Développement web</h4>
+                        <h4>Développement web et logiciels</h4>
                         <p>Conception de vos sites internet et applications pour tous type d'appareil </p>
                         </div>
                     </div>
